--- a/src/iris/Production.cls
+++ b/src/iris/Production.cls
@@ -6,6 +6,10 @@ XData ProductionDefinition
 <Production Name="iris.Production" TestingEnabled="true" LogGeneralTraceEvents="false">
   <Description></Description>
   <ActorPoolSize>2</ActorPoolSize>
+  <Item Name="Python.MLOperation" Category="" ClassName="Python.MLOperation" PoolSize="1" Enabled="false" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
+  </Item>
+  <Item Name="Python.TuningOperation" Category="" ClassName="Python.TuningOperation" PoolSize="1" Enabled="false" Foreground="false" Comment="" LogTraceEvents="false" Schedule="">
+  </Item>
 </Production>
 }
 
